Add Mysql as optional replacement for ElasticSearch (#92)
* Add Mysql as replacement for ElasticSearch per-project

* Fix: Subscription bundle already has a base subscription

* Fix mysql credentials in local env

* Wait until killbill healthcheck returns 200 in local env

* Add forced search engine as config property visible by super admin only

* Fix killbill healthcheck in local env

* Fix up tests

* Fix up mysql driver in runtime; fixup guice dep in IT

* Fix again...

* Do not crerate elastic scripts unless configured

* Test mysql/elastic client must not be called when disabled via searchEngine config prop

* Fix project store overridiing applicatoi config

* Fix overriding configs

* Use mockito ThrowsException

* Force Config source to shutdown after all other services have shutdown themselves.

* Fix awaiting non-singleton service; Fix config source injection used incorrect injector during test

* Fix NoOpService registered twice

* Fix NoOp service is still registered twice iicorrectly

* Fix infinite loop of service waiting for itself to finish

* Fix allow empty guice service binder

* Healthcheck check services' state

* WIP

* Fix weird classloader issue

* Allow unsetting non-required enum property for use with search engine selection

* Switch self-hosted to MySQL by default; keeping previous installations as ElasticSearch; adding migration instructions in README.md

* Fix missing fundGoal in mysql; update Jooq classes with @Generated annotation; fix mysql client was used when read&write were disabled; fix junit @Before doesn't abide by calling parent method first

* Undo rename of classes to keep backward compatibility with self-hosted instances using config properties with old name

* Fix when ES client is not needed, don't expect it to be instantiated

* Fix handle if mysql function already exists

* Fix with more robust testing of duplicate function/index creation should be ignored

* b